@@ -26,6 +26,7 @@ EXPORTS
 	gimp_hwb_to_rgb
 	gimp_param_rgb_get_type
 	gimp_param_spec_rgb
+	gimp_param_spec_rgb_has_alpha
 	gimp_rgb_add
 	gimp_rgb_clamp
 	gimp_rgb_composite
