@@ -29,15 +29,15 @@ G_BEGIN_DECLS
  * GIMP_TYPE_RGB
  */
 
-#define GIMP_TYPE_RGB                 (gimp_rgb_get_type ())
-#define GIMP_VALUE_HOLDS_RGB(value)   (G_TYPE_CHECK_VALUE_TYPE ((value), GIMP_TYPE_RGB))
+#define GIMP_TYPE_RGB               (gimp_rgb_get_type ())
+#define GIMP_VALUE_HOLDS_RGB(value) (G_TYPE_CHECK_VALUE_TYPE ((value), GIMP_TYPE_RGB))
 
-GType   gimp_rgb_get_type             (void) G_GNUC_CONST;
+GType   gimp_rgb_get_type           (void) G_GNUC_CONST;
 
-void    gimp_value_get_rgb            (const GValue  *value,
-                                       GimpRGB       *rgb);
-void    gimp_value_set_rgb            (GValue        *value,
-                                       const GimpRGB *rgb);
+void    gimp_value_get_rgb          (const GValue  *value,
+                                     GimpRGB       *rgb);
+void    gimp_value_set_rgb          (GValue        *value,
+                                     const GimpRGB *rgb);
 
 
 /*
@@ -46,27 +46,18 @@ void    gimp_value_set_rgb            (GValue        *value,
 
 #define GIMP_TYPE_PARAM_RGB           (gimp_param_rgb_get_type ())
 #define GIMP_IS_PARAM_SPEC_RGB(pspec) (G_TYPE_CHECK_INSTANCE_TYPE ((pspec), GIMP_TYPE_PARAM_RGB))
-#define GIMP_PARAM_SPEC_RGB(pspec)    (G_TYPE_CHECK_INSTANCE_CAST ((pspec), GIMP_TYPE_PARAM_RGB, GimpParamSpecRGB))
-
-typedef struct _GimpParamSpecRGB GimpParamSpecRGB;
-
-struct _GimpParamSpecRGB
-{
-  GParamSpecBoxed  parent_instance;
-
-  gboolean         has_alpha;
-  GimpRGB          default_value;
-};
 
 
-GType        gimp_param_rgb_get_type  (void) G_GNUC_CONST;
+GType        gimp_param_rgb_get_type       (void) G_GNUC_CONST;
 
-GParamSpec * gimp_param_spec_rgb      (const gchar    *name,
-                                       const gchar    *nick,
-                                       const gchar    *blurb,
-                                       gboolean        has_alpha,
-                                       const GimpRGB  *default_value,
-                                       GParamFlags     flags);
+GParamSpec * gimp_param_spec_rgb           (const gchar    *name,
+                                            const gchar    *nick,
+                                            const gchar    *blurb,
+                                            gboolean        has_alpha,
+                                            const GimpRGB  *default_value,
+                                            GParamFlags     flags);
+
+gboolean     gimp_param_spec_rgb_has_alpha (GParamSpec     *pspec);
 
 
 /*  RGB and RGBA color types and operations taken from LibGCK  */
